openshift/template/dev/staff-processor-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"staff-processor:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"staff-processor\")].image"}]
    template.alpha.openshift.io/wait-for-ready: "true"
  labels:
    app: staff-processor
    promotion-group: staff-processor
  name: staff-processor
spec:
  podManagementPolicy: Parallel
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: staff-processor
  serviceName: staff-processor
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
        deploymentTimestamp: "0"
      labels:
        app: staff-processor
    spec:
      containers:
        - env:
            - name: QUARKUS_KAFKA_STREAMS_APPLICATION_ID
              value: staff-processor3
            - name: QUARKUS_KAFKA_STREAMS_BOOTSTRAP_SERVERS
              value: dl0991kfkab0001.nsw.education:9092,dl0991kfkab0002.nsw.education:9092
            - name: QUARKUS_KAFKA_STREAMS_SCHEMA_REGISTRY_URL
              value: http://dl0991kfkar0001.nsw.education:8081,http://dl0991kfkar0002.nsw.education:8081
            - name: STAFF_INPUT_TOPIC
              value: staff-hub-db
            - name: STAFF_OUTPUT_TOPIC
              value: staff-hub-streaming
            - name: STAFF_DEDUPLICATED_TOPIC
              value: staff-hub-deduplicated
            - name: STAFF_DEDUPLICATE_STATE_STORE
              value: staff-deduplicate-state-store-3
            - name: STAFF_AGGREGATE_STATE_STORE
              value: staff-aggregate-state-store-3
            - name: NEW_RELIC_APP_NAME
              value: staff-processor-dev
            - name: NEW_RELIC_LICENSE_KEY
              valueFrom:
                secretKeyRef:
                  key: apikey
                  name: newrelic-apikey
            - name: JAVA_OPTIONS
              value: -Dnewrelic.config.file=/newrelic-config/newrelic.yml -javaagent:/mnt/newrelic/newrelic-agent.jar
            - name: NEW_RELIC_LOG
              value: STDOUT
            - name: NO_PROXY
              value: .cluster.local,.det.nsw.edu.au,.svc,.nsw.education
            - name: no_proxy
              value: .cluster.local,.det.nsw.edu.au,.svc,.nsw.education
          image: staff-processor:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 5
          name: staff-processor
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 90
            periodSeconds: 120
            successThreshold: 1
            timeoutSeconds: 120
          resources:
            limits:
              cpu: 1000m
              memory: 400Mi
            requests:
              cpu: 100m
              memory: 200Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /data/kafka-streams
              name: rocksdb-volume
            - mountPath: /mnt/newrelic
              name: newrelic-volume
            - mountPath: /newrelic-config
              name: newrelic-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 300
      volumes:
        - configMap:
            defaultMode: 420
            name: newrelic-config
          name: newrelic-config
        - emptyDir: {}
          name: newrelic-volume
        - emptyDir: {}
          name: rocksdb-volume
  updateStrategy:
    type: RollingUpdate
